--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+
+* {
+  font-family: 'Space Grotesk', sans-serif;
 }
 
 .logo {
